# Indoor-Navigation

./: .gitignore  README.md
react-client/: package-lock.json  package.json  tsconfig.json
react-client/config/: webpack.config.js
react-client/public/: index.html
react-client/src/: App.css  App.tsx  index.tsx
react-client/src/Graph/: Graph.tsx
react-client/src/components/: About.tsx  Graph.tsx  HomePage.tsx  NavbarComp.tsx  QrScanner.tsx
react-client/src/db/: dijkstra.ts  graph.json
wasm/: Cargo.toml
wasm/src/: cameraPoseEst.rs  camera_pose_est.rs  lib.rs
