[package]
name = "wasm"
version = "0.1.0"
authors = ["Aneesh Saripalli <aneeshsaripalli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
rqrr = "0.2.0"
image = "0.21.2"
wasm-bindgen = "0.2.47"
