[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"


[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
json = "0.12.4"
rqrr = "0.4.0"
image = "0.23.14"
wasm-bindgen = "0.2.47"
cargo-debug = "0.3.0"
base64 = "0.13.0"
tinyjson = "2"
p3p = "0.1.0"
lambda-twist = "0.7.0"

cv-core = "0.15.0"
num-traits = { version = "0.2.12", default-features = false }
arrayvec = { version = "0.5.1", default-features = false }
approx = "0.3.2"
arrsac = "0.5.0"
rand = { version = "0.7.3", features = ["small_rng"] }
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
itertools = "0.9.0"
arraymap = "0.1.1"
cv-pinhole = "0.6.0"

