[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"


[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
rqrr = "0.4.0"
image = "0.23.14"
wasm-bindgen = "0.2.47"
cargo-debug = "0.3.0"
base64 = "0.13.0"
lambda-twist = "0.7.0"
cv-core = "0.15.0"
arrsac = "0.5.0"
rand = { version = "0.7.3", features = ["small_rng"] }
cv-pinhole = "0.6.0"

